revno: 17609 message:   use relationship text from setting; make sure z-index of calendar popup is greater than others; apply option name/code formatting in relationship UI
committer: Abyot Asalefew Gizaw <abyota@gmail.com>
branch nick: dhis2
timestamp: Fri 2014-11-28 15:54:12 +0100

--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/dhis-web-tracker-capture/styles/style.css
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/dhis-web-tracker-capture/styles/style.css
@@ -802,7 +802,7 @@ a:active {
 }
 
 #ui-datepicker-div, .calendars-popup {
-	z-index: 1000; //has to be greater than bootsrap's modal z-index
+	z-index: 2000; //has to be greater than bootsrap's modal z-index
 }
 
 @media print {
